# ParkingApp

./: .gitignore  CMakeLists.txt  CameraPlacement.py  CameraPlacementRT v2.ipynb  CameraPlacementRT.ipynb  CameraPlacementRT_Final.ipynb  CameraPlacementRT_Final_Priority.ipynb  CameraPlacementRT_V2.ipynb  CameraPlacementRT_static_store.ipynb  CameraPlacementRayTraced.cpp  CameraPlacementRayTraced.ipynb  CameraPlacement_OpenAI.py  CameraPlacement_v1.ipynb  MapImageDownloader.ipynb  ParkingDetection.py  PriorityEditting.py  RayMasking.ipynb  RayMasking_Atharva.ipynb  RayMasking_Atharva.py  colorPix.py  coord.txt  cornDetection_test.ipynb  corner_detection_test.ipynb  cythonizedFunctions.c  cythonizedFunctions.cp310-win_amd64.pyd  cythonizedFunctions.html  requirements.txt  setup.py  tempCodeRunnerFile.py  tests.ipynb
Cython attempt/: Functions.cpp  cythonizedFunctions.pyx
Tests/: tempCodeRunnerFile.py  tests.ipynb
